--- a/src/css/user/FindID.css
+++ b/src/css/user/FindID.css
@@ -1,31 +1,50 @@
 /* FindID.css */
 
-#span1 {
-    position: absolute;
-    left: 12.5%;
-    top: 18%;
+.form-group2 {
+    align-items: flex-start;
+    justify-content: space-between;
+    width: 100%;
+    margin-top: 30px;
 
-    font-family: 'Poor Story';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 40px;
-    line-height: 38px;
-    text-align: center;
-
-    color: #28467A;
 }
 
+#span1 {
+    font-family: 'Poor Story';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 38px;
+    color: #28467A;
+    margin-bottom: 20px;
+    transform: translateX(-365px);
+}
+
+/* Healing Pets 텍스트 */
 #HealingPets2 {
     position: absolute;
-    right: 5%;
-    top: 5%;
-
+    right: 20px;
+    top: 10px;
     font-family: 'Single Day';
     font-style: normal;
     font-weight: 400;
-    font-size: 40px;
+    font-size: 36px;
     line-height: 65px;
-    text-align: center;
-
     color: #000000;
+}
+
+.back-button {
+    position: absolute;
+    bottom: 70px;
+    left: 60px;
+    background-color: white;
+    color: black;
+    font-size: 24px;
+    border: 3px solid #28467A;
+    border-radius: 50%;
+    cursor: pointer;
+    font-family: 'Poor Story', sans-serif;
+}
+
+.back-button:hover {
+    background-color: #bac3d3;
 }
