--- a/src/css/user/Login.css
+++ b/src/css/user/Login.css
@@ -16,24 +16,24 @@
     box-sizing: border-box;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
     position: relative;
+    transform: translateY(10px);
 
 }
 
 #HealingPets {
     font-family: 'Single Day', sans-serif;
     font-size: 36px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     text-align: center;
     width: 100%;
     color: #000;
 }
 
 .form-group {
-    display: flex;
     align-items: flex-start;
     justify-content: space-between;
     width: 100%;
-    margin-bottom: 40px;
+    margin-top: 20px;
 
 }
 
