[FEAT] 관리자 병원 관리 페이지 구현 관리자 후기 관리 페이지 구현

--- a/src/css/Signup.css
+++ b/src/css/Signup.css
@@ -204,8 +204,9 @@
   background-color: #28467A;
 }
 
-.signup-user-btn:active {
-  transform: scale(1.05);
+button:active {
+  opacity: 0.5;
+    transition: opacity 0.3s ease;
 }
 
 .signupPWD-error-message {
