--- a/src/css/admin/HosControl.css
+++ b/src/css/admin/HosControl.css
@@ -1,10 +1,10 @@
-.user-control-container {
+.hos-control-container {
     width: 80%;
     margin: 0 auto;
     font-family: Arial, sans-serif;
 }
 
-.user-control-title {
+.hos-control-title {
     color: #333;
     font-size: 24px;
     text-align: left;
@@ -12,13 +12,13 @@
     font-weight: bold;
 }
 
-.user-control-search-bar {
+.hos-control-search-bar {
     display: flex;
     justify-content: flex-end;
     margin-bottom: 20px;
 }
 
-.user-control-search-input {
+.hos-control-search-input {
     width: 160px;
     padding: 10px;
     border: 1px solid #000000; 
@@ -28,7 +28,7 @@
     font-weight: bold;
 }
 
-.user-control-search-button {
+.hos-control-search-button {
     padding: 10px 20px; 
     background-color: white; 
     color: black; 
@@ -39,51 +39,49 @@
     font-weight: bold;
 }
 
-.user-control-table {
+.hos-control-table {
     width: 100%;
     border-collapse: collapse;
     margin-bottom: 20px;
 }
 
-.user-control-table th, .user-control-table td {
+.hos-control-table th, .hos-control-table td {
     border: 1px solid #ccc;
     padding: 10px;
     text-align: center;
+    white-space: nowrap;
 }
 
-.user-control-table th {
+.hos-control-table th {
     background-color: #F0C60A;
     color: black;
-
 }
 
-.user-control-table td {
+.hos-control-table td {
     background-color: #f9f9f9;
 }
 
-.user-control-delete-button {
+.hos-control-edit-button, .hos-control-delete-button {
     background-color: #FFA500;
     color: white;
-    border: 1px solid black;
     padding: 5px 10px;
     cursor: pointer;
-    border-radius: 0px;
-    font-weight: bold;
+    border: 1px solid black;
+    margin: 2px;
 }
 
-.user-control-delete-button:hover {
+.hos-control-edit-button:hover, .hos-control-delete-button:hover {
     background-color: #ff6600;
 }
 
-/* 페이징 스타일 */
-.user-control-pagination {
+.hos-control-pagination {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 20px;
 }
 
-.user-control-pagination button {
+.hos-control-pagination button {
     background-color: transparent;
     border: none;
     font-size: 16px;
@@ -91,7 +89,7 @@
     padding: 5px 10px;
 }
 
-.user-control-active {
+.hos-control-active {
     color: black;
     font-weight: bold;
     border: 1px solid #ddd;
@@ -99,49 +97,6 @@
     background-color: #f0f0f0;
 }
 
-.user-control-pagination button:hover {
+.hos-control-pagination button:hover {
     background-color: #f0f0f0;
 }
-
-.user-control-modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-}
-
-.user-control-modal-content {
-    background-color: white;
-    padding: 20px;
-    border-radius: 0px;
-    text-align: center;
-    width: 300px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
-
-.user-control-modal-buttons {
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-}
-
-.user-control-modal-buttons button {
-    margin: 0 10px;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 0px;
-    cursor: pointer;
-    background-color: white;
-    border: 1px solid black;
-    color: black;
-}
-
-.user-control-modal-buttons button:hover {
-    background-color: #F0C60A;
-}
-
