--- a/src/css/hosAdmin/HosSchedul.css
+++ b/src/css/hosAdmin/HosSchedul.css
@@ -7,6 +7,7 @@
     text-align: center;
     font-family: Arial, sans-serif;
     background-color: white;
+    padding: 20px;
 }
 
 .hos-schedul-select-container {
