--- a/src/css/HosReser.css
+++ b/src/css/HosReser.css
@@ -19,14 +19,14 @@
 }
 
 .hos-reser-title {
-    font-size: 36px;
+    font-size: 30px;
     font-weight: bold;
     margin-bottom: 40px;
     color: #fff; /* 글자 색상 */
 }
 
   /* 검색창 스타일 */
-.reser-bar {
+.hos-reser-search-bar {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -34,8 +34,7 @@
     position: relative; /* 이미지가 검색창 안에 위치하도록 설정 */
 }
 
-.reser-input {
-    
+.hos-reser-input {
     width: 650px; /* 검색창 넓이 */
     padding: 20px; /* 검색창 높이 */
     font-size: 24px;
@@ -44,6 +43,7 @@
     outline: none;
     padding-right: 70px; /* 검색창 내부 여백 (이미지가 겹치지 않게) */
     padding-left: 50px;
+    font-family: 'Poor Story';
 }
 
 .search-icon {
@@ -79,31 +79,41 @@
     transform: translateY(-50%) scale(1); /* 클릭 시 원래 크기로 돌아옴 */
 }
 
-.reser-input::placeholder {
+.hos-reser-input::placeholder {
     color: #8a8a8a; /* 플레이스홀더 색상 */
     font-weight: lighter;
 }
 
-.reser-results {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 30px;
+.hos-reser-search-results {
+    position: absolute; /* 검색창 아래에 고정되도록 설정 */
+    margin-top: 158px;
+    margin-left: -10px;
+    width: 700px; /* 검색창과 동일한 너비 */
+    z-index: 1000; /* 다른 요소들 위에 표시되도록 설정 */
+    max-height: 400px; /* 최대 높이 설정 (300px 정도, 필요에 맞게 조정 가능) */
+    overflow-y: auto; /* 넘칠 경우 스크롤바 표시 */
+    padding: 10px 0;
+    font-family: 'Poor Story';
 }
 
-.reser-result-card {
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    padding: 15px;
-    width: 200px;
-    background-color: #f9f9f9;
+.hos-reser-search-result-item {
+    border: 1.5px solid #000000;
+    padding: 20px;
     cursor: pointer;
-    transition: transform 0.3s;
-    color: #333; /* 글자 색상 */
+    width: calc(100% - 30px); /* 검색 결과 항목도 검색창의 너비에 맞게 설정 */
+    margin: 5px auto;
+    background-color: white;
+    text-align: left;
+    font-size: 15px;
+    color: #000;
 }
 
-.reser-result-card:hover {
-    transform: scale(1.05);
-    background-color: #e9e9e9;
+.hos-reser-search-result-item:hover {
+    background-color: #eeeb51; /* 호버 시 배경색 */
+    border: 1.5px solid #000000;
 }
+
+.hos-reser-search-result-item.selected {
+    background-color: #eeeb51;
+}
+
