[FEAT] 관리자 회원 관리 API 연동(관리자 회원 상태 변화 연동) 관리자 병원 관리 API 연동(관리자 병원 수정 삭제 연동)

--- a/src/css/admin/ReviewControl.css
+++ b/src/css/admin/ReviewControl.css
@@ -26,6 +26,7 @@
     font-size: 14px;
     color: #7D7D7D;
     font-weight: bold;
+    border-right: 1px solid lightgray
 }
 
 .review-control-search-button {
