--- a/src/css/admin/HosControl.css
+++ b/src/css/admin/HosControl.css
@@ -1,7 +1,8 @@
 .hos-control-container {
-    width: 80%;
+    width: 100%;
     margin: 0 auto;
     font-family: Arial, sans-serif;
+    
 }
 
 .hos-control-title {
@@ -26,6 +27,7 @@
     font-size: 14px;
     color: #7D7D7D;
     font-weight: bold;
+    border-right: 1px solid lightgray
 }
 
 .hos-control-search-button {
@@ -43,6 +45,7 @@
     width: 100%;
     border-collapse: collapse;
     margin-bottom: 20px;
+
 }
 
 .hos-control-table th, .hos-control-table td {
@@ -71,6 +74,19 @@
 }
 
 .hos-control-edit-button:hover, .hos-control-delete-button:hover {
+    background-color: #ff6600;
+}
+
+.hos-control-save-button, .hos-control-close-button {
+    background-color: #FFA500;
+    color: white;
+    padding: 5px 10px;
+    cursor: pointer;
+    border: 1px solid black;
+    margin: 2px;
+}
+
+.hos-control-save-button:hover, .hos-control-close-button:hover {
     background-color: #ff6600;
 }
 
