--- a/src/css/admin/ReserControl.css
+++ b/src/css/admin/ReserControl.css
@@ -55,6 +55,7 @@
     font-size: 14px;
     color: #7D7D7D;
     font-weight: bold;
+    border-right: 1px solid lightgray
 }
 
 .reser-control-search-button {
