--- a/src/css/AllReviews.css
+++ b/src/css/AllReviews.css
@@ -5,37 +5,35 @@
     gap: 40px;
     padding: 20px;
     width: 100%;
-    box-sizing: border-box; /* 패딩과 테두리 너비를 포함하여 계산 */
-}
-
-/* 병원 섹션 */
-.hospital-section {
-    background: #f9f9f9;
-    padding: 20px;
-    border-radius: 12px;
-    text-align: left;
-    transition: transform 0.3s ease;
-    width: 100%; /* 병원 섹션도 화면 너비에 맞춤 */
     box-sizing: border-box;
 }
 
-.hospital-section h2{
-    text-align: center;
+/* 병원 섹션 */
+.hospital-group {
+    background: #f9f9f9;
+    padding: 15px;
+    border-radius: 12px;
+    text-align: left;
+    transition: transform 0.3s ease;
+    width: 100%;
+    box-sizing: border-box;
+    font-family: 'Poor Story', cursive;
 }
 
-.hospital-info{
-    font-size: 13px;
-    color: #1b4b1c;
-    font: bold;
+.hospital-group h3 {
+    text-align: center;
+    font-family: 'Do Hyeon', sans-serif;
+    font-size: 25px;
+    margin-bottom: 16px;
 }
 
 /* 리뷰 카드들을 그리드로 배치하는 컨테이너 */
 .reviews-container {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* 한 줄에 2개의 리뷰 */
     gap: 16px;
     margin-top: 16px;
-    width: 100%; /* 카드 컨테이너도 화면 너비에 맞춤 */
+    width: 100%;
     box-sizing: border-box;
 }
 
@@ -48,12 +46,13 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    position: relative; /* 위치 조정을 위한 relative 설정 */
+    position: relative;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     color: black;
-    width: 100%; /* 카드도 화면에 맞게 */
+    width: 100%;
     box-sizing: border-box;
     border: 5px solid #E3AB1B;
+    font-family: 'Poor Story', cursive;
 }
 
 .review-card:hover {
@@ -61,29 +60,17 @@
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
 }
 
-/* 리뷰 별점(오른쪽 하단에 고정) */
-.rating {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end; /* 오른쪽 정렬 */
-    font-size: 16px;
-    color: #4caf50; /* 초록색 별점 */
-    position: absolute;
-    bottom: 10px; /* 하단에 고정 */
-    right: 10px; /* 오른쪽에 고정 */
-}
-
-.rating span {
-    margin-right: 8px;
-    display: flex;
-    align-items: center;
+/* 리뷰 제목과 내용 구분 */
+.review-card strong {
+    font-family: 'Do Hyeon', sans-serif;
+    display: inline; /* 인라인 요소로 설정 */
+    margin-right: 10px; /* 텍스트와 간격 조정 */
 }
 
 /* 리뷰 내용 스타일 */
 .review-content {
-    font-size: 18px;
+    font-size: 15px;
     line-height: 1.6;
     color: black;
-    font: bold;
-    margin-right: 60px; /* 별점과 겹치지 않도록 여백 추가 */
+    margin-right: 60px;
 }
